<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="identifiants" android:title="@string/pref_credentials" android:summary="@string/prefsum_credentials">
        <EditTextPreference android:title="@string/pref_login" android:key="login" android:defaultValue=""/>
        <EditTextPreference android:title="@string/pref_password" android:key="passe" android:defaultValue=""/>
        <CheckBoxPreference android:key="remember" android:title="@string/pref_saveLogin" android:summary="@string/prefsum_saveLogin" android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="api" android:title="@string/pref_api" android:summary="@string/prefsum_api">
        <EditTextPreference android:title="@string/pref_serverUrl" android:key="urlData" android:defaultValue="http://10.0.2.2:5000/" android:summary="@string/prefsum_serverUrl"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="mockApi"
            android:summary="@string/prefsum_apiMock"
            android:title="@string/pref_apiMock" />
    </PreferenceCategory>
</PreferenceScreen>
