<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:layout_marginLeft="8sp"
    android:layout_marginTop="8sp"
    android:layout_marginRight="8sp"
    android:layout_marginBottom="8sp"
    android:gravity="center_horizontal|end"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="48sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actLogin_login_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:layout_weight="1"
            android:ems="10">

            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actLogin_password_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edtPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword">

            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/login_cbRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actLogin_remember_label" />

    <Button
        android:id="@+id/login_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/actLogin_log_in" />

    <TextView
        android:id="@+id/login_progressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/secondary_text_light" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login_btnSignup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actLogin_sign_up" />

</LinearLayout>