<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:layout_marginLeft="8sp"
    android:layout_marginTop="8sp"
    android:layout_marginRight="8sp"
    android:layout_marginBottom="8sp"
    android:gravity="center_horizontal|end"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/actNewConv_title"
        android:textSize="40sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actNewConv_theme_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newConv_edtTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:layout_weight="1"
            android:ems="10">

            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/newConv_btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actNewConv_create" />
</LinearLayout>
